<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jump Maze</string>
    <string name="action_settings">Settings</string>
    <string name="jump_maze">Jump Maze</string>
    <string name="background_music">Background Music</string>
    <string name="sounds_effects">Sounds Effects</string>
    <string name="sound_title">Sound Options</string>
    <string name="hint">Hints</string>
    <string name="about">About</string>
    <string name="tutorial">Tutorial</string>
    <string name="start_maze">Start Maze!</string>
    <string name="apply">Apply</string>
    <string name="tutorial1">The objective of the game is to get from the start to the goal (G). </string>
    <string name="tutorial2">From the current numbered cell, you can move that exact number of cells horizontally or vertically in a straight line.</string>
    <string name="tutorial3">Suppose we move to blank. The next move options are here or there.</string>
    <string name="faq">FAQ \n </string>
    <string name="note2">There is always a way to reach the goal position, no matter which position you reach. Restarts are not necessary. \n\n After solving each maze, you will be able to compare how many moves you made to the minimum number of moves possible, and can replay the game if you wish.</string>
    <string name="note">Note</string>
    <string name="activity_splash_app">ActivitySplash</string>
    <string name="play">&quot;Let's play!&quot;</string>
    <string name="aboutinfo">About \n\n Project Manager: Lorin Rumberger \n\n GUI: Tim Cook and Lee Sieger \n\n Activities and Navigation: Luke Burtch and Anh Nguyen \n\n Maze Logic: Erin Brady \n\n Sounds: Gloria Mendoza \n\n Tutorial: Phoebe Eng</string>

</resources>