<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/soundTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/backgroundMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_music" />

    <CheckBox
        android:id="@+id/soundFX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sounds_effects" />

</LinearLayout>
